# mors_quadruped

./: .gitignore  LICENSE  README.md  README_rus.md  install.sh  start_controller.sh
LocomotionController/: CMakeLists.txt
LocomotionController/include/: ContactStateFSM.hpp  ConvexMpc.hpp  ConvexMpcThread.hpp  FootStepPlanner.hpp  GaitTransition.hpp  LcmDataExchange.hpp  ReferenceGenerator.hpp  SwingController.hpp  SwingTrajectoryGenerator.hpp  WBICThread.hpp
LocomotionController/include/wbic/: wbic_control.hpp
LocomotionController/include/wbic/tasks/: body_ori_task.hpp  body_pos_task.hpp  tip_pos_task.hpp  wbc_task.hpp
LocomotionController/src/: ContactStateFSM.cpp  ConvexMpc.cpp  ConvexMpcThread.cpp  FootStepPlanner.cpp  GaitTransition.cpp  LcmDataExchange.cpp  ReferenceGenerator.cpp  SwingController.cpp  SwingTrajectoryGenerator.cpp  WBICThread.cpp  main.cpp
LocomotionController/src/wbic/: wbic_control.cpp
LocomotionController/src/wbic/tasks/: body_ori_task.cpp  body_pos_task.cpp  tip_pos_task.cpp  wbc_task.cpp
LocomotionController/tools/: tune_wbic.py
LocomotionController/tools/results/: stairs_exact_local2.json  stairs_exact_local6.json  stairs_smoke_clean_seed7.json  stairs_smoke_endurance_seed7.json  stairs_smoke_margin_seed7.json  stairs_smoke_seed7.json  stairs_tune_seed314.json  stairs_tune_seed42.json  tune_20260317_postpatch_check.json  tune_20260317_seed314.json  tune_20260317_seed42.json  tune_wbic_stance_only_20260317_postpatch_check.json  tune_wbic_stance_only_20260317_postpatch_exact_check.json  tune_wbic_stance_only_20260317_seed314.json  tune_wbic_stance_only_20260317_seed42.json
MorsLogger/: CMakeLists.txt
MorsLogger/include/: CSVWriter.h  csv_maintaner.hpp  lcm_data_exchange_ml.hpp
MorsLogger/src/: csv_maintaner.cpp  lcm_data_exchange_ml.cpp  main.cpp
Simulator/: mors_simulator.py
Simulator/MJCF/: boards.xml  boxes.xml  flat.xml  generate_boards.py  generate_ramp.py  generate_stairs.py  mors.xml  patch.xml  ramp.xml  readme.txt  stairs.xml
Simulator/additional/: errors.py  mjcf.py  mors_env.py  motor_accurate.py  mujoco_model_test.ipynb
Simulator/meshes/: b.stl  j1.stl  j2.stl  j3_1.stl
Simulator/meshes/old/: body.stl  robohead.stl
common/include/: Robot.hpp  SimpleGaitScheduler.hpp  data_types.hpp  leg_model.hpp  structs.hpp  system_functions.hpp
common/src/: Robot.cpp  SimpleGaitScheduler.cpp  leg_model.cpp  system_functions.cpp
common/urdf/: mors.urdf  mors.xacro
config/: action_controller.yaml  channels.yaml  emergency.yaml  gait_scheduler.yaml  imp_config.yaml  robot_config.yaml  simulation.yaml  stance_controller_mpc.yaml  state_estimator.yaml  swing_controller.yaml  timesteps.yaml  wbic.yaml
lcm_msgs/: contact_sensor_msg.lcm  enable_msg.lcm  foot_cmd_msg.lcm  gait_params_msg.lcm  grf_cmd_msg.lcm  height_map.lcm  imu_data.lcm  lcm_gen.sh  mpc_cmd_msg.lcm  odometry.lcm  phase_signal_msg.lcm  robot_cmd_msg.lcm  robot_state_msg.lcm  servo_cmd_msg.lcm  servo_state_msg.lcm  std_int.lcm  wbc_cmd_msg.lcm  wbc_state_msg.lcm
ros_ws/src/mors_keyboard_control/: package.xml  setup.cfg  setup.py
ros_ws/src/mors_keyboard_control/mors_keyboard_control/: mors_keyboard_control.py
ros_ws/src/mors_ros_msgs/: CMakeLists.txt  package.xml
ros_ws/src/mors_ros_msgs/msg/: GaitParams.msg
ros_ws/src/mors_ros_msgs/srv/: RobotCmd.srv
ros_ws/src/robot_mode_controller/: CMakeLists.txt  package.xml
ros_ws/src/robot_mode_controller/include/old/: main.cpp
ros_ws/src/robot_mode_controller/include/robot_mode_controller/: action1.hpp  action2.hpp  lcm_data_exchange.hpp  robot_mode_controller.hpp  structs.hpp  trajectory_generator.hpp
ros_ws/src/robot_mode_controller/launch/: bringup.launch.py
ros_ws/src/robot_mode_controller/src/: action1.cpp  action2.cpp  lcm_data_exchange.cpp  robot_mode_controller.cpp
